examples/eyre_output_context.run.stderr
Error: kawoosh

Caused by:
    error: kaboom
      --> examples/eyre_output_context.rs:10:9
       |
    10 |     Err(Spanned::here("kaboom"))?;
       |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
       |

Location:
    examples/eyre_output_context.rs:10:5
